couchpotato/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchpotato
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      volumes:
      - name: couchpotato
        hostPath:
          path: /glusterfs/couchpotato
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: oauth2-proxy
        secret:
          secretName: oauth2-proxy
      containers:
      - name: couchpotato
        image: linuxserver/couchpotato
        imagePullPolicy: Always
        volumeMounts:
        - name: couchpotato
          subPath: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: movies
          mountPath: /movies
        ports:
        - containerPort: 5050
      - name: oauth2-proxy
        image: a5huynh/oauth2_proxy
        ports:
        - containerPort: 4180
        volumeMounts:
        - mountPath: /etc/oauth2-proxy
          name: oauth2-proxy
          readOnly: true
        args:
        - "-upstream=http://localhost:5050/"
        - "-cookie-domain=couchpotato.desertbluffs.com"
        - "-redirect-url=https://couchpotato.desertbluffs.com/oauth2/callback"
        - "-http-address=0.0.0.0:4180"
        - "-config=/etc/oauth2-proxy/config"
        - "-authenticated-emails-file=/etc/oauth2-proxy/authenticated-emails"
        - "-cookie-secure=true"
        - "-cookie-expire=168h0m"
        - "-cookie-refresh=60m"
        - "-skip-provider-button=true"
