couchpotato/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchpotato
spec:
  selector:
    app: couchpotato
  ports:
  - name: couchpotato
    port: 80
    targetPort: 4180
