couchpotato/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: couchpotato
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - couchpotato.desertbluffs.com
    secretName: couchpotato-tls
  rules:
  - host: couchpotato.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: couchpotato
          servicePort: 80
